# project_visualization_tool

./: .gitignore  INSTALL.md  RAD.docx  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publist_pypi.yml  python-app-dev.yml  python-app.yml  tag_on_merge.yaml  test-dev.yml  testpypi_publish.yml
docs/: RAD.docx
src/_internal/: __init__.py  data_preprocessing.py  data_typing.py  exceptions.py  file_parser.py  git_mining.py  typing.py
src/app/: app.py  cli.py  helper.py
src/gui/: __init__.py  aio_components.py  components.py  filters.py
src/gui/assets/: tooltip.js
src/gui/assets/css/: style.css
src/gui/pages/: dir_info.py  homepage.py
src/utility/: __init__.py  _version.py  filters.py  helper.py  logs.py
src/utility/logging_configs/: logs_config_file.json  logs_config_file_old.json  logs_config_file_old_prod.json  logs_config_file_prod.json  logs_config_stdout.json
tests/: placeholder.py  report.txt  test_cli.py  test_data_preprocessing.py  test_file_parser.py  test_git_miner.py  test_helper.py
